--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=3000
 spring.datasource.username=postgres
-spring.datasource.password=root
+spring.datasource.password=adminadmin
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.generate-ddl=false
-spring.datasource.url=jdbc:postgresql://localhost:5432/mobile
+spring.datasource.url=jdbc:postgresql://localhost:5432/ManutencaoUFPR
