--- a/bin/src/main/resources/application.properties
+++ b/bin/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=3000
 spring.datasource.username=postgres
-spring.datasource.password=SENHA
+spring.datasource.password=adminadmin
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.generate-ddl=false
